fix alignaments

--- a/owehub/gui/src/ui/pages/technicalSupport/support.css
+++ b/owehub/gui/src/ui/pages/technicalSupport/support.css
@@ -43,9 +43,10 @@
   font-weight: 400;
   line-height: 18px;
   text-align: left;
-  margin-top: -7px;
+  margin-top: -6px;
   /* background-color: #0493CE; */
 }
+
 
 .vertical-support {
   border-left: 1px solid #dbdddf;
